--- a/NitroxLauncher/Pages/CommunityPage.xaml
+++ b/NitroxLauncher/Pages/CommunityPage.xaml
@@ -34,7 +34,7 @@
         </Grid.RowDefinitions>
 
         <Grid>
-            <TextBlock FontSize="32" Foreground="White" TextWrapping="Wrap" Margin="0" VerticalAlignment="Bottom" FontWeight="Bold"><Run Text="Community"/></TextBlock>
+            <TextBlock FontSize="32" Foreground="White" TextWrapping="Wrap" Margin="0" VerticalAlignment="Bottom" FontWeight="Bold"><Run Text="Community"/><Run Language="es-es" Text=". Sort off..."/></TextBlock>
         </Grid>
 
         <Grid Grid.Row="1" Grid.ColumnSpan="2">
@@ -65,7 +65,7 @@
                 </Grid>
 
                 <TextBlock FontSize="16" Foreground="White" TextWrapping="Wrap" Margin="0,72,10,0" VerticalAlignment="Top" FontWeight="Bold"><Run Text="Discord"/></TextBlock>
-                <TextBlock FontSize="16" Foreground="White" TextWrapping="Wrap" Margin="0,98,10,-18" VerticalAlignment="Top" FontWeight="Bold"><Run Text="Join our active Discord server to find servers to play on, get help from the support team and much more." FontSize="14" FontWeight="Normal"/></TextBlock>
+                <TextBlock FontSize="16" Foreground="White" TextWrapping="Wrap" Margin="0,98,10,-18" VerticalAlignment="Top" FontWeight="Bold"><Run FontSize="14" Language="es-es" Text="You can join my discord :3"/></TextBlock>
             </Grid>
         </Grid>
 
@@ -93,7 +93,7 @@
                 </Grid>
 
                 <TextBlock FontSize="16" Foreground="White" TextWrapping="Wrap" Margin="0,72,10,0" VerticalAlignment="Top" FontWeight="Bold"><Run Text="Twitter"/></TextBlock>
-                <TextBlock FontSize="16" Foreground="White" TextWrapping="Wrap" Margin="0,98,10,-18" VerticalAlignment="Top" FontWeight="Bold"><Run Text="Follow the Nitrox Twitter account to always be up to date on latest developments, events, and releases." FontSize="14" FontWeight="Normal"/></TextBlock>
+                <TextBlock FontSize="16" Foreground="White" TextWrapping="Wrap" Margin="0,98,10,-18" VerticalAlignment="Top" FontWeight="Bold"><Run FontSize="14" Language="es-es" Text="Or follow me if you want :)"/></TextBlock>
             </Grid>
         </Grid>
 
@@ -153,7 +153,7 @@
                 </Grid>
 
                 <TextBlock FontSize="16" Foreground="White" TextWrapping="Wrap" Margin="0,72,10,0" VerticalAlignment="Top" FontWeight="Bold" Text="GitHub"/>
-                <TextBlock FontSize="16" Foreground="White" TextWrapping="Wrap" Margin="0,98,10,0" VerticalAlignment="Top" FontWeight="Bold"><Run Text="Want to be part of the team? Contribute from code to translations to the Nitrox project on GitHub." FontSize="14" FontWeight="Normal"/></TextBlock>
+                <TextBlock FontSize="16" Foreground="White" TextWrapping="Wrap" Margin="0,98,10,0" VerticalAlignment="Top" FontWeight="Bold"><Run Text="Nitrox crack Github repo page." FontSize="14" FontWeight="Normal"/></TextBlock>
             </Grid>
         </Grid>
 
